--- a/src/main/resources/static/css/scss/themes/_admin.scss
+++ b/src/main/resources/static/css/scss/themes/_admin.scss
@@ -141,6 +141,45 @@
                     &.active {
                         background-color: #1a1a1a;
                     }
+
+                    &[data-bs-toggle="collapse"]::after {
+                        border: solid;
+                        border-width: 0 .075rem .075rem 0;
+                        content: "";
+                        display: inline-block;
+                        padding: 2px;
+                        position: absolute;
+                        right: 1.5rem;
+                        top: 1.4rem;
+                        transform: rotate(-135deg);
+                        transition: all .2s ease-out;
+                    }
+
+                    &[data-bs-toggle="collapse"].collapsed::after {
+                        transform: rotate(45deg);
+                        transition: all .2s ease-out;
+                    }
+                }
+
+                .sub_menu {
+                    a {
+                        padding: 0.625rem 1.625rem;
+                        color: #e0ecef;
+                        position: relative;
+                        display: block;
+                        font-size: 0.875rem;
+                        transition: all .2s ease-in-out;
+                        margin-bottom: 5px;
+
+                        &:hover {
+                            background-color: #1a1a1a;
+                        }
+
+                        &.active {
+                            background-color: #1a1a1a;
+                        }
+                    }
+
                 }
 
                 .line {
