--- a/src/main/resources/static/css/scss/style.scss
+++ b/src/main/resources/static/css/scss/style.scss
@@ -23,7 +23,9 @@
 @import 'pages/account/profile';
 @import 'pages/account/signUp';
 @import 'pages/account/updatePw';
-@import 'pages/admin/board/noticeMng'; //  admin start
+@import 'pages/admin/account/accountMng'; //  admin start
+@import 'pages/admin/account/profileForm';
+@import 'pages/admin/board/noticeMng';
 @import 'pages/admin/board/qaMng';
 @import 'pages/admin/board/reviewMng';
 @import 'pages/admin/item/itemDtl';
