--- a/src/main/resources/static/css/css/style.css
+++ b/src/main/resources/static/css/css/style.css
@@ -1058,6 +1058,196 @@ input:-webkit-autofill:active {
   background-color: #ffffff;
 }
 
+.account_mng_body {
+  width: 90%;
+  margin: 0 auto;
+}
+.account_mng_body .table_wrap {
+  width: 100%;
+  overflow-x: auto;
+}
+.account_mng_body .table_wrap table {
+  min-width: 810px;
+}
+.account_mng_body .table_wrap table tbody tr td.center {
+  text-align: center;
+}
+.account_mng_body .table_wrap table tbody tr td .update_role_btn,
+.account_mng_body .table_wrap table tbody tr td .update_btn {
+  margin-bottom: 3px;
+  display: inline-block;
+}
+.account_mng_body .table_wrap table tbody tr td.user_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.account_mng_body .table_wrap table tbody tr td.user_info a span {
+  margin-bottom: 5px;
+}
+.account_mng_body .table_wrap table tbody tr td.user_info a span:hover {
+  color: rgb(165, 165, 165);
+}
+.account_mng_body .message_wrap {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 110px 0;
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.account_mng_body .message_wrap .message {
+  font-size: 11px;
+  color: #707070;
+  font-weight: bold;
+}
+.account_mng_body .search_box {
+  width: 100%;
+  padding: 20px 0 20px 10px;
+  color: #2e2e2e;
+  font-size: 12px;
+}
+.account_mng_body .search_box .txt {
+  margin-right: 22px;
+}
+.account_mng_body .search_box .search_type,
+.account_mng_body .search_box .search_date_type,
+.account_mng_body .search_box .search_state_type,
+.account_mng_body .search_box .search_sell_status,
+.account_mng_body .search_box .search_by {
+  margin: 2px 2px 0 0;
+  width: 80px;
+  height: 30px;
+  line-height: 29px;
+  min-height: 30px;
+  border: 1px solid #ddd;
+  padding: 0 5px 0 10px;
+  color: #353535;
+}
+.account_mng_body .search_box .search_type,
+.account_mng_body .search_box .search_date_type,
+.account_mng_body .search_box .search_state_type {
+  width: 100px;
+}
+.account_mng_body .search_box .search_sell_status {
+  width: 120px;
+}
+.account_mng_body .search_box .search_by {
+  width: 80px;
+}
+.account_mng_body .search_box input {
+  width: 240px;
+  border: none;
+  height: 30px;
+  border: 1px solid #d3d3d3;
+  padding-left: 10px;
+  font-size: 12px;
+  margin: 2px 2px 0 0;
+  color: #353535;
+}
+.account_mng_body .search_box input:focus {
+  outline: none;
+}
+.account_mng_body .search_box input:focus::-webkit-input-placeholder {
+  opacity: 0;
+}
+.account_mng_body .search_box input:focus::-moz-placeholder {
+  opacity: 0;
+}
+.account_mng_body .search_box input:focus:-ms-input-placeholder {
+  opacity: 0;
+}
+.account_mng_body .search_box input:focus::-ms-input-placeholder {
+  opacity: 0;
+}
+.account_mng_body .search_box input:focus::placeholder {
+  opacity: 0;
+}
+.account_mng_body .search_box button.search_btn {
+  width: 72px !important;
+  font-size: 12px !important;
+  color: #353535;
+  vertical-align: top;
+  margin-top: 2px;
+}
+
+@media (max-width: 1200px) {
+  .account_mng_body {
+    width: 100%;
+  }
+}
+.profile_form_body .profile_form {
+  width: 80%;
+}
+.profile_form_body .profile_form table tbody td span {
+  margin-top: 2px;
+}
+.profile_form_body .profile_form table tbody td .mail_select {
+  width: 125px;
+}
+.profile_form_body .profile_form table tbody td .pw_input_box {
+  color: #d43301;
+}
+.profile_form_body .profile_form table tbody td .pw_input_box .pw_result_text {
+  margin-left: 4px;
+}
+.profile_form_body .profile_form table tbody td .pw_confirm_input_box .pw_confirm_result_text {
+  margin-left: 4px;
+}
+.profile_form_body .profile_form .btn_box {
+  padding: 10px 0;
+  text-align: center;
+  display: block;
+  margin-top: 30px;
+  position: relative;
+}
+.profile_form_body .profile_form .btn_box .del_btn {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  background-color: #DC3545;
+  border: 1px solid transparent !important;
+  color: white;
+}
+.profile_form_body .profile_form .btn_box .del_btn:hover {
+  background-color: #db5562;
+  border: 1px solid transparent !important;
+}
+
+@media (max-width: 1100px) {
+  .profile_form_body .profile_form {
+    width: 100%;
+  }
+}
+@media (max-width: 900px) {
+  .profile_form_body .profile_form {
+    width: 100%;
+  }
+  .profile_form_body .profile_form table colgroup col:nth-child(1) {
+    width: 25% !important;
+  }
+  .profile_form_body .profile_form .btn_box button {
+    font-size: 11px;
+    width: 90px;
+  }
+}
 .noticeMng_body {
   width: 90%;
   margin: 0 auto;
@@ -1121,8 +1311,9 @@ input:-webkit-autofill:active {
 .noticeMng_body .search_box .txt {
   margin-right: 22px;
 }
+.noticeMng_body .search_box .search_type,
 .noticeMng_body .search_box .search_date_type,
-.noticeMng_body .search_box .search_date_type_admin,
+.noticeMng_body .search_box .search_state_type,
 .noticeMng_body .search_box .search_sell_status,
 .noticeMng_body .search_box .search_by {
   margin: 2px 2px 0 0;
@@ -1134,7 +1325,9 @@ input:-webkit-autofill:active {
   padding: 0 5px 0 10px;
   color: #353535;
 }
-.noticeMng_body .search_box .search_date_type_admin {
+.noticeMng_body .search_box .search_type,
+.noticeMng_body .search_box .search_date_type,
+.noticeMng_body .search_box .search_state_type {
   width: 100px;
 }
 .noticeMng_body .search_box .search_sell_status {
@@ -1251,8 +1444,9 @@ input:-webkit-autofill:active {
 .qaMng_body .search_box .txt {
   margin-right: 22px;
 }
+.qaMng_body .search_box .search_type,
 .qaMng_body .search_box .search_date_type,
-.qaMng_body .search_box .search_date_type_admin,
+.qaMng_body .search_box .search_state_type,
 .qaMng_body .search_box .search_sell_status,
 .qaMng_body .search_box .search_by {
   margin: 2px 2px 0 0;
@@ -1264,7 +1458,9 @@ input:-webkit-autofill:active {
   padding: 0 5px 0 10px;
   color: #353535;
 }
-.qaMng_body .search_box .search_date_type_admin {
+.qaMng_body .search_box .search_type,
+.qaMng_body .search_box .search_date_type,
+.qaMng_body .search_box .search_state_type {
   width: 100px;
 }
 .qaMng_body .search_box .search_sell_status {
@@ -1403,8 +1599,9 @@ input:-webkit-autofill:active {
 .reviewMng_body .search_box .txt {
   margin-right: 22px;
 }
+.reviewMng_body .search_box .search_type,
 .reviewMng_body .search_box .search_date_type,
-.reviewMng_body .search_box .search_date_type_admin,
+.reviewMng_body .search_box .search_state_type,
 .reviewMng_body .search_box .search_sell_status,
 .reviewMng_body .search_box .search_by {
   margin: 2px 2px 0 0;
@@ -1416,7 +1613,9 @@ input:-webkit-autofill:active {
   padding: 0 5px 0 10px;
   color: #353535;
 }
-.reviewMng_body .search_box .search_date_type_admin {
+.reviewMng_body .search_box .search_type,
+.reviewMng_body .search_box .search_date_type,
+.reviewMng_body .search_box .search_state_type {
   width: 100px;
 }
 .reviewMng_body .search_box .search_sell_status {
@@ -1856,8 +2055,9 @@ input:-webkit-autofill:active {
 .item_mng_body .search_box .txt {
   margin-right: 22px;
 }
+.item_mng_body .search_box .search_type,
 .item_mng_body .search_box .search_date_type,
-.item_mng_body .search_box .search_date_type_admin,
+.item_mng_body .search_box .search_state_type,
 .item_mng_body .search_box .search_sell_status,
 .item_mng_body .search_box .search_by {
   margin: 2px 2px 0 0;
@@ -1869,7 +2069,9 @@ input:-webkit-autofill:active {
   padding: 0 5px 0 10px;
   color: #353535;
 }
-.item_mng_body .search_box .search_date_type_admin {
+.item_mng_body .search_box .search_type,
+.item_mng_body .search_box .search_date_type,
+.item_mng_body .search_box .search_state_type {
   width: 100px;
 }
 .item_mng_body .search_box .search_sell_status {
@@ -1992,8 +2194,9 @@ input:-webkit-autofill:active {
 .order_mng_body .search_box .txt {
   margin-right: 22px;
 }
+.order_mng_body .search_box .search_type,
 .order_mng_body .search_box .search_date_type,
-.order_mng_body .search_box .search_date_type_admin,
+.order_mng_body .search_box .search_state_type,
 .order_mng_body .search_box .search_sell_status,
 .order_mng_body .search_box .search_by {
   margin: 2px 2px 0 0;
@@ -2005,7 +2208,9 @@ input:-webkit-autofill:active {
   padding: 0 5px 0 10px;
   color: #353535;
 }
-.order_mng_body .search_box .search_date_type_admin {
+.order_mng_body .search_box .search_type,
+.order_mng_body .search_box .search_date_type,
+.order_mng_body .search_box .search_state_type {
   width: 100px;
 }
 .order_mng_body .search_box .search_sell_status {
@@ -2281,8 +2486,9 @@ input:-webkit-autofill:active {
 .notice_body .search_box .txt {
   margin-right: 22px;
 }
+.notice_body .search_box .search_type,
 .notice_body .search_box .search_date_type,
-.notice_body .search_box .search_date_type_admin,
+.notice_body .search_box .search_state_type,
 .notice_body .search_box .search_sell_status,
 .notice_body .search_box .search_by {
   margin: 2px 2px 0 0;
@@ -2294,7 +2500,9 @@ input:-webkit-autofill:active {
   padding: 0 5px 0 10px;
   color: #353535;
 }
-.notice_body .search_box .search_date_type_admin {
+.notice_body .search_box .search_type,
+.notice_body .search_box .search_date_type,
+.notice_body .search_box .search_state_type {
   width: 100px;
 }
 .notice_body .search_box .search_sell_status {
@@ -2556,8 +2764,9 @@ input:-webkit-autofill:active {
 .qa_body .search_box .txt {
   margin-right: 22px;
 }
+.qa_body .search_box .search_type,
 .qa_body .search_box .search_date_type,
-.qa_body .search_box .search_date_type_admin,
+.qa_body .search_box .search_state_type,
 .qa_body .search_box .search_sell_status,
 .qa_body .search_box .search_by {
   margin: 2px 2px 0 0;
@@ -2569,7 +2778,9 @@ input:-webkit-autofill:active {
   padding: 0 5px 0 10px;
   color: #353535;
 }
-.qa_body .search_box .search_date_type_admin {
+.qa_body .search_box .search_type,
+.qa_body .search_box .search_date_type,
+.qa_body .search_box .search_state_type {
   width: 100px;
 }
 .qa_body .search_box .search_sell_status {
@@ -3177,8 +3388,9 @@ input:-webkit-autofill:active {
 .review_body .search_box .txt {
   margin-right: 22px;
 }
+.review_body .search_box .search_type,
 .review_body .search_box .search_date_type,
-.review_body .search_box .search_date_type_admin,
+.review_body .search_box .search_state_type,
 .review_body .search_box .search_sell_status,
 .review_body .search_box .search_by {
   margin: 2px 2px 0 0;
@@ -3190,7 +3402,9 @@ input:-webkit-autofill:active {
   padding: 0 5px 0 10px;
   color: #353535;
 }
-.review_body .search_box .search_date_type_admin {
+.review_body .search_box .search_type,
+.review_body .search_box .search_date_type,
+.review_body .search_box .search_state_type {
   width: 100px;
 }
 .review_body .search_box .search_sell_status {
@@ -4935,7 +5149,7 @@ input:-webkit-autofill:active {
   background-color: #1a1a1a;
 }
 .admin_main_area .admin_sidebar_area .sidebar_menu .sidebar-item .sidebar-link.active {
-  background-color: #1a1a1a;
+  color: #e06f18;
 }
 .admin_main_area .admin_sidebar_area .sidebar_menu .sidebar-item .sidebar-link[data-bs-toggle=collapse]::after {
   border: solid;
@@ -4958,20 +5172,19 @@ input:-webkit-autofill:active {
   transition: all 0.2s ease-out;
 }
 .admin_main_area .admin_sidebar_area .sidebar_menu .sidebar-item .sub_menu a {
-  padding: 0.625rem 1.625rem;
-  color: #e0ecef;
+  padding: 10px 0 10px 25px;
+  color: #a7afb1;
   position: relative;
   display: block;
-  font-size: 0.875rem;
+  font-size: 14px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  margin-bottom: 5px;
 }
 .admin_main_area .admin_sidebar_area .sidebar_menu .sidebar-item .sub_menu a:hover {
   background-color: #1a1a1a;
 }
 .admin_main_area .admin_sidebar_area .sidebar_menu .sidebar-item .sub_menu a.active {
-  background-color: #1a1a1a;
+  color: #e06f18;
 }
 .admin_main_area .admin_sidebar_area .sidebar_menu .sidebar-item .line {
   border-top: 1px solid #3b4249;
