--- a/src/main/resources/templates/layouts/adminLayout.html
+++ b/src/main/resources/templates/layouts/adminLayout.html
@@ -81,10 +81,10 @@
                         <i class="xi-cart-o pe-2"></i>
                         주문 관리
                     </a>
-                    <a onclick="alert('준비중입니다.');" class="sidebar-link"
-                        th:classappend="${currentMenu == 'customerManagement'}? active">
+                    <a th:href="@{/admin/account}" class="sidebar-link"
+                        th:classappend="${currentMenu == 'accountManagement'}? active">
                         <i class="xi-user-o pe-2"></i>
-                        고객 관리
+                        회원 관리
                     </a>
                     <a class="sidebar-link collapsed"
                         data-bs-toggle="collapse" data-bs-target="#sub_menu" role="button">
